[package]
name = "drift-ffi-sys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.93.0", features = [
    "mainnet-beta", "drift-rs"
] }
# pin to whatever version drift-program uses
hex = "*"
solana-program = { version = "1.16.*" }
solana-sdk = { version = "1.16.*" }
type-layout = "*"
