[package]
name = "drift-ffi-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings to drift program"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.95.0", features = [
    "mainnet-beta"
] }
hex = "*"
solana-sdk = { version = "1.16.*" }
type-layout = "*"
