[package]
name = "drift-ffi-sys"
version = "0.2.0"
edition = "2021"
description = "FFI bindings to drift program"

[features]
static = []

[lib]
crate-type = ["staticlib"]  # default

[target.'cfg(feature = "static")'.lib]
crate-type = ["staticlib"]

[dependencies]
abi_stable = "0.11"
drift-program = { package = "drift", git = "https://github.com/drift-labs/protocol-v2.git", tag = "v2.100.0", features = [
    "mainnet-beta"
] }
hex = "*"
solana-sdk = { version = "1.16.*" }
type-layout = "*"
